# junifer

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.rst  Dockerfile  Dockerfile-ci  Dockerfile-docs  Makefile  README.md  codecov.yml  conda-env.yml  dev-requirements.txt  docs-requirements.txt  ignore_words.txt  index.html  justfile  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  dataset-request.yml  documention-request.yml  feature-request.yml  marker-request.yml
.github/workflows/: ci-docs.yml  ci.yml  docker-ci-publish.yml  docker-docs-publish.yml  docker-publish.yml  docs-preview.yml  docs.yml  lint.yml  publish.yml  pypi.yml
docs/: Makefile  api.rst  builtin.rst  conf.py  contribution.rst  data.rst  faq.rst  help.rst  index.rst  installation.rst  links.inc  maintaining.rst  redirect.html  starting.rst  whats_new.rst
docs/_templates/: versions copy.html  versions.html
docs/api/: api.rst  cli.rst  configs.rst  data.rst  datagrabbers.rst  index.rst  onthefly.rst  pipeline.rst  stats.rst
docs/changes/: 0.0.1.inc  contributors.inc  latest.inc
docs/extending/: confounds_format.rst  coordinates.rst  datagrabber.rst  dependencies.rst  extension.rst  index.rst  logging.rst  maps.rst  marker.rst  masks.rst  parcellations.rst  preprocessor.rst
docs/sphinxext/: gh_substitutions.py
docs/understanding/: data.rst  datagrabber.rst  datareader.rst  index.rst  marker.rst  pipeline.rst  preprocess.rst  storage.rst
docs/using/: codeless.rst  configuring.rst  generate_yaml.rst  index.rst  masks.rst  queueing.rst  running.rst
examples/: README.rst  norun_hcpfc_pearson.py  norun_ukbvm_gmd.py  run_compute_parcel_mean.py  run_datagrabber_bids_datalad.py  run_ets_rss_marker.py  run_junifer_julearn.py  run_run_gmd_mean.py
examples/yamls/: gmd_mean.yaml  gmd_mean_htcondor.yaml  partly_cloudy_agg_mean_tian.yml  ukb_gmd_mean.yaml
junifer/: __init__.py  __init__.pyi  _version.py  conftest.py  stats.py  testing.py
junifer/api/: __init__.py  __init__.pyi  cli.py  decorators.py  functions.py  parser.py  pipeline.py  registry.py  run.py  utils.py
junifer/cli/: __init__.py  __init__.pyi  cli.py  functions.py  parser.py  utils.py
junifer/configs/: __init__.py  juseless.py
junifer/data/: __init__.py  __init__.pyi  _dispatch.py  atlases.py  coordinates.py  masks.py  parcellations.py  pipeline_data_registry_base.py  template_spaces.py  utils.py
junifer/datagrabber/: __init__.py  __init__.pyi  aomic.py  aomic1000.py  base.py  datalad_base.py  dmcc13_benchmark.py  hcp.py  meta.py  multiple.py  multiple_base.py  pattern.py  pattern_datalad.py  pattern_datalad_base.py  pattern_validation_mixin.py  utils.py
junifer/datareader/: __init__.py  __init__.pyi  default.py
junifer/markers/: __init__.py  __init__.pyi  base.py  brainprint.py  collection.py  complexity.py  crossatlas.py  crossatlas_functional_connectivity.py  crossparcellation_functional_connectivity.py  ets_rss.py  etsrss.py  functional_connectivity.py  functional_connectivity_atlas.py  functional_connectivity_parcels.py  functional_connectivity_spheres.py  hurst_exponent.py  maps_aggregation.py  parcel.py  parcel_aggregation.py  pipeline_mixin.py  reho_parcels.py  reho_spheres.py  sphere_aggregation.py  sphere_aggregator.py  utils.py
junifer/onthefly/: __init__.py  __init__.pyi  _brainprint.py  read_transform.py
junifer/pipeline/: __init__.py  __init__.pyi  _data_object_dumper.py  collection.py  marker_collection.py  pipeline_component_registry.py  pipeline_mixin.py  pipeline_step_mixin.py  registry.py  singleton.py  update_meta_mixin.py  utils.py  workdir_manager.py
junifer/preprocess/: __init__.py  __init__.pyi  _temporal_filter.py  _temporal_slicer.py  base.py  bold_warper.py  confounds.py
junifer/storage/: __init__.py  __init__.pyi  _types.py  base.py  hdf5.py  pandas_base.py  sqlite.py  utils.py
junifer/testing/: __init__.py  __init__.pyi  datagrabbers.py  registry.py  utils.py
junifer/tests/: test_main.py  test_stats.py
main/: .buildinfo  api.html  builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  starting.html  whats_new.html
scratch/: test_niftimasker.py
storage/: element_0014_restingstate_PIOP1
tools/: create_aomic1000_example_dataset.py  create_aomicpiop1_example_dataset.py  create_aomicpiop2_example_dataset.py  create_bids_example_dataset.py  create_bids_example_dataset_sessions.py  create_dmcc13_benchmark_example_dataset.py  create_hcp1200_example_dataset.py
v0.0.1/: .buildinfo  builtin.html  contribution.html  faq.html  genindex.html  index.html  installation.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.0.2/: .buildinfo  builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  py-modindex.html  search.html  searchindex.js  starting.html  whats_new.html
v0.0.3/: .buildinfo  builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  py-modindex.html  search.html  searchindex.js  starting.html  whats_new.html
v0.0.4/: .buildinfo  builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  py-modindex.html  search.html  searchindex.js  starting.html  whats_new.html
v0.0.5/: .buildinfo  builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  starting.html  whats_new.html
v0.0.6/: builtin.html  contribution.html  faq.html  genindex.html  help.html  index.html  installation.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  starting.html  whats_new.html
(+16936 files in other folders)
