[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
  "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "junifer"
description = "JUelich NeuroImaging FEature extractoR"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-only"}
authors = [
    { name = "Fede Raimondo", email = "f.raimondo@fz-juelich.de" },
    { name = "Synchon Mandal", email = "s.mandal@fz-juelich.de" },
]
maintainers = [
    { name = "Fede Raimondo", email = "f.raimondo@fz-juelich.de" },
    { name = "Synchon Mandal", email = "s.mandal@fz-juelich.de" },
]
keywords = [
    "neuroimaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1.3,<8.2",
    "numpy>=1.24,<1.27",
    "datalad>=0.15.4,<0.20",
    "pandas>=1.4.0,<2.2",
    "nibabel>=3.2.0,<5.11",
    "nilearn>=0.9.0,<=0.11.0",
    "sqlalchemy>=1.4.27,<= 2.1.0",
    "ruamel.yaml>=0.17,<0.18",
    "importlib_metadata; python_version < '3.10'",
    "h5py>=3.8.0,<3.10",
]
dynamic = ["version"]

[project.urls]
homepage = "https://juaml.github.io/junifer"
documentation = "https://juaml.github.io/junifer"
repository = "https://github.com/juaml/junifer"

[project.scripts]
junifer = "junifer.api.cli:cli"

[project.optional-dependencies]
all = [
    "bctpy==0.6.0",
    "neurokit2>=0.1.7",
]
bct = ["bctpy==0.6.0"]
onthefly = [
    "bctpy==0.6.0"
]
neurokit2 = ["neurokit2>=0.1.7"]
dev = ["tox", "pre-commit"]
docs = [
    "seaborn>=0.11.2,<0.13",
    "sphinx>=5.3.0,<7.3",
    "sphinx-gallery>=0.11.0,<0.15.0",
    "furo>=2022.9.29,<2023.10.0",
    "numpydoc>=1.5.0,<1.6",
    "julearn>=0.3.0,<0.4",
    "sphinx-copybutton>=0.5.1,<0.5.3",
    "towncrier>=22.12.0,<23.7",
    "sphinxcontrib-mermaid>=0.8.1,<0.10",
]

################
# Tool configs #
################

[tool.setuptools]
packages = ["junifer", "junifer.external.h5io.h5io"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "junifer/_version.py"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
extend-exclude = """
(
  junifer/external/h5io
)
"""

[tool.codespell]
skip = "*/auto_examples/*,*.html,.git/,*.pyc,*/_build/*,*/h5io/*"
count = ""
quiet-level = 3
ignore-words = "ignore_words.txt"
interactive = 0
builtin = "clear,rare,informal,names,usage,code"

[tool.ruff]
line-length = 79
select = [
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # mccabe
    "C90",
    # pydocstyle
    "D",
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # pygrep-hooks
    "PGH",
    # ruff
    "RUF",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
    # flake8-2020
    "YTT",
]
extend-exclude = [
    "__init__.py",
    "junifer/external/h5io",
    "docs",
    "examples",
    "tools",
]
extend-ignore = [
    # Use of `functools.lru_cache` or `functools.cache` on methods can lead to
    # memory leaks. The cache may retain instance references, preventing garbage
    # collection.
    "B019",
    # abstract class with no abstract methods
    "B024",
    "D202",
    # missing docstring in __init__, incompatible with numpydoc
    "D107",
    # use r""" if any backslashes in a docstring
    "D301",
    # class names should use CapWords convention
    "N801",
    # function name should be lowercase
    "N802",
    # variable in function should be lowercase
    "N806",
    # use specific rule codes when ignoring type issues
    "PGH003",
]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["junifer"]
known-third-party =[
    "click",
    "numpy",
    "datalad",
    "pandas",
    "nibabel",
    "nilearn",
    "sqlalchemy",
    "yaml",
    "pytest",
]

[tool.ruff.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--ignore=junifer/external/h5io -vv"

[tool.towncrier]
directory = "docs/changes/newsfragments"
filename = "docs/whats_new.rst"
package = "junifer"
# to use gh_substitutions
issue_format = ":gh:`{issue}`"
# modify to have proper toctree
underlines = "-^~"
# set line length to 79
wrap = true

# Need to put default explicitly as custom is not combined with default

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.doc]
name = "Improved Documentation"
showcontent = true

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Misc"
showcontent = true

[tool.towncrier.fragment.removal]
name = "Deprecations and Removals"
showcontent = true

# Add custom towncrier fragment for enhancements
[tool.towncrier.fragment.enh]
name = "Enhancements"
showcontent = true

# Add custom towncrier fragment for API changes
[tool.towncrier.fragment.change]
name = "API Changes"
showcontent = true
